# LUIGI

./: .gitignore  README.md  cspell.json  lxi_gui.sh  pyproject.toml
codes/: .lxi_gui.sh.swp  global_variables.py  lxi_csv_to_cdf.py  lxi_data_read_funcs.py  lxi_file_read_funcs.py  lxi_gui.py  lxi_gui.sh  lxi_gui_entry_box.py  lxi_gui_plot_routines.py  lxi_load_plot_routines.py  lxi_misc_codes.py  lxi_read_binary_files.py  lxi_read_files.py  package_list.txt
