[tool.poetry]
name = "LEXI-GUI"
version = "0.2.3"
description = "GUI for LEXI data visualization"
authors = ["Ramiz A. Qudsi <qudsira@bu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pandas = "^1.4.2"
seaborn = "^0.11.2"
tabulate = "^0.8.9"
pyinstaller = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
